# arxivist

./: .pre-commit-config.yaml  README.md  arxivist.py  setup.cfg
